<resources>
    <string name="add_task_btn">Add Task</string>
    <string name="reset_btn">Reset</string>
    <string name="none">None</string>
    <string name="set_date_title">Set Date  :</string>
    <string name="title_header">Enter The Title of your Task</string>
    <string name="title_hint">Enter The Title (Optional)</string>
    <string name="description_header">Enter The Description of your Task</string>
    <string name="description_hint">Description</string>
    <string name="set_time_header">Set Time :</string>
    <string name="select_time_content">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="repeat">Repeat : </string>
    <string name="close_drawer">Close</string>
    <string name="open_drawer">Open</string>
    <string name="rate_dialog_title">Do you enjoy with the App ?</string>
    <string name="rate_dialog_message">If you enjoy with this app, would you mind taking a moment to rate it ? It won\'t take more than a minute. Thanks for your support !</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="SetSoundKey">Set_sound</string>
    <string name="STT_key">STT</string>
    <string name="TTS_key">TTS</string>
    <string name="UK">English(UK)</string>
    <string name="US">English(US)</string>
    <string name="AR">Arabic/العربية</string>
    <string name="Ch">China</string>
    <string name="GE">German</string>
    <string name="IT">Italy</string>
    <string name="feedback">feedback</string>
    <string name="MoreApps">moreapps</string>
    <string name="vibration">vibration</string>
    <string name="RemindMe">Remindme</string>
    <string name="min1">1</string>
    <string name="min2">2</string>
    <string name="min5">5</string>
    <string name="min10">10</string>
    <string name="OrderTasks">OrderBy</string>
    <string name="defaultOrder">Default</string>
    <string name="AlphabeticallyOrder">Alphabetically</string>
    <string name="DateOtN">By Date (oldest to newest)</string>
    <string name="DateNtO">By Date (newest To oldest)</string>
    <string name="MyTasksShortcut">My Tasks</string>
    <string name="FinishedTasksShortcut">Finished Tasks</string>
    <string name="AddTaskShortcut">Add Task</string>
    <string name="SettingsShortcut">Settings</string>
    <string name="RemoveAdKey">RemoveAd</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_maps">Map</string>
    <string name="recreate_task">Re Create Task</string>
    <string name="update_task">Update Task</string>
    <string name="finished_tasks">Finished Tasks</string>
    <string name="no_active_tasks">No Active Tasks</string>
    <string name="there_are_no_active_tasks">There are no Active Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="add_location_task">Add Location Task</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="location_tasks">Location Tasks</string>
    <string name="set_the_location_of_your_task">Set The location of your Task</string>
    <string name="you_must_have_google_play_services_in_your_n_mobile_first">You must have Google Play Services in your \n mobile First</string>
    <string name="settings">Settings</string>
    <string name="rate_app">Rate App</string>
    <string name="to_get_your_location_tasks_please_keep_your_location_enabled_and_don_t_turned_it_off_and_for_best_accuracy_n_keep_a_connection_to_the_network">To Get your Location Tasks please keep The location enabled and don`t turned it off and For best accuracy keep a Connection to the Network</string>
    <string name="set_my_tasks">Set My Tasks</string>
    <string name="vip">VIP</string>
    <string name="congratulations_you_now_have_the_premium_edition_n_you_will_not_get_ads_again">Congratulations You Now have The Premium Edition\n You will not Get Ads again</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="finished_task">Finished Task</string>
    <string name="description">Description</string>
    <string name="task_options">Task Options</string>
    <string name="get_a_notification_for_this_task_when">(Get a Notification for This Task When)</string>
    <string name="enter_the_location">Enter The Location</string>
    <string name="exit_the_location">Exit The Location</string>
    <string name="repeat_task">Repeat Task</string>
    <string name="more_details">More Details</string>
    <string name="title">Title</string>
    <string name="about_the_task">About The Task</string>
    <string name="get_notification_for_this_task_when">Get Notification for this task when</string>
    <string name="you_enter_the_specified_location">You Enter the Specified Location</string>
    <string name="you_exit_the_specified_location">You Exit the Specified Location</string>
    <string name="you_stay_in_the_location_for_some_time">You Stay in the Location for some time</string>
    <string name="more_options">More Options</string>
    <string name="timing_of_the_task">Timing  of  The  Task</string>
    <string name="facebook">facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="Instagram">Instagram</string>
    <string name="Youtube">Youtube</string>
    <string name="with_time">With Time :</string>
    <string name="with_date">With Date :</string>
    <string name="select_location">Select Location</string>
    <string name="help">Help</string>
    <string name="you_should_mark_the_location_of_your_task_by_press_a_long_click_at_any_position_on_the_map">You should Mark the Location of your Task by press a long click at any position on the map</string>
    <string name="this_app_collects_location_data_to_enable_your_location_tasks_so_that_the_app_can_detect_your_current_location_and_notify_you_about_your_location_tasks_even_when_the_app_is_closed_or_not_in_use">This app collects location data to enable your Location Tasks so that the app can detect your Current Location and notify you about your Location Tasks even when the app is closed or not in use.</string>
</resources>