<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="20dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:cardCornerRadius="16dp"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/changeBackground"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/EarthImg"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_globe"
            android:contentDescription="Earth img"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/FinishedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@id/EarthImg"
            android:padding="2dp"
            android:text="@string/finished_task"
            android:textColor="@color/PinkColor"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <TextView
             android:id="@+id/descriptionheader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/description"
             android:textColor="@android:color/holo_red_light"
             android:textSize="15sp"
             />
         <TextView
             android:padding="4dp"
             android:textColor="@android:color/black"
             android:fontFamily="sans-serif"
             android:id="@+id/Description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             tools:text="Heloooooooooooooooooooooooooooooooooooooooooooooo"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/task_option_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/task_options"
             android:textColor="@android:color/holo_red_light"
             android:textSize="15sp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/get_a_notification_for_this_task_when"
             android:textSize="14sp"
             />

         <TextView
             android:id="@+id/EnterLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="12dp"
             android:fontFamily="sans-serif"
             android:padding="4dp"
             android:text="@string/enter_the_location"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/black"
             android:textSize="14sp"
             android:visibility="gone"
             tools:visibility="visible"
             app:drawableEndCompat="@drawable/ic_gps" />

         <TextView
             android:id="@+id/ExitLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="12dp"
             android:fontFamily="sans-serif"
             android:padding="4dp"
             android:text="@string/exit_the_location"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/black"
             android:textSize="14sp"
             android:visibility="gone"
             tools:visibility="visible"
             app:drawableEndCompat="@drawable/ic_gps" />

         <TextView
             android:id="@+id/DwellInTheLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="12dp"
             android:fontFamily="sans-serif"
             android:padding="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/black"
             android:textSize="14sp"
             android:visibility="gone"
             tools:visibility="visible"
             app:drawableEndCompat="@drawable/ic_gps" />


     </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>