<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/root_Addtask"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ImageView
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_planner"
    android:contentDescription="@string/add_task" />
    <androidx.cardview.widget.CardView
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:foreground="@drawable/cardview"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginEnd="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/with_time"
        android:textColor="@color/PinkColor"
        android:layout_marginStart="12dp"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_time"/>
        <TextView
            android:textSize="16.1sp"
            android:id="@+id/time_txt"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/with_time"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginEnd="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/with_date"
        android:textColor="@color/PinkColor"
        android:layout_marginStart="12dp"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_date"/>

        <TextView
            android:textSize="16.1sp"
            android:id="@+id/date_txt"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:padding="4dp"
            tools:text="@string/with_time" />
    </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/ad_conatiner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        tools:visibility="visible" />

    </LinearLayout>
